--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.8
-loader_version=0.11.3
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.61
+loader_version=0.11.7
 
-# Fabric API
-fabric_version=0.34.1+1.16
-
+#Fabric api
+fabric_version=0.28.5+1.15
 
 # Mod Properties
 mod_version = 1.0.0
@@ -19,4 +18,4 @@ archives_base_name = profession-example-mod
 
 # Taterzens
 # See the latest version at https://github.com/samolego/Taterzens/releases/latest
-taterzens_version = 1.1.0
+taterzens_version = 1.3.3
